@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.12)
 
 option(NO_FEATURE_REPORT "Disable feature report function" OFF)
+if(CMAKE_SYSTEM_NAME STREQUAL "Android")
+    option(WITH_SSE "Turn OFF for x86 build without SSE support - targets older devices" ON)
+endif()
 
 include_directories("${CMAKE_CURRENT_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/../../../../src/libmpg123/")
 
@@ -121,6 +124,9 @@ elseif(MACHINE STREQUAL "x86")
     endif()
 
     cmake_host_system_information(RESULT HAVE_SSE QUERY HAS_SSE)
+    if(CMAKE_SYSTEM_NAME STREQUAL "Android")
+        set(HAVE_SSE ${WITH_SSE})
+    endif()
     if(HAVE_SSE)
         set(PLATFORM_DEFINITIONS OPT_SSE)
         set(PLATFORM_SOURCES
@@ -140,8 +146,6 @@ elseif(MACHINE STREQUAL "x86")
                 "${CMAKE_CURRENT_SOURCE_DIR}/../../../../src/libmpg123/dct64_sse.S"
                 "${CMAKE_CURRENT_SOURCE_DIR}/../../../../src/libmpg123/synth_sse.S")
         endif()
-        target_sources(${TARGET} PRIVATE
-            "${CMAKE_CURRENT_SOURCE_DIR}/../../../../src/libmpg123/dct64_i386.c")
     endif()
 elseif(MACHINE STREQUAL "arm64")
         set(PLATFORM_DEFINITIONS OPT_MULTI OPT_GENERIC OPT_GENERIC_DITHER OPT_NEON64)
